--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.17",
+        "babel-preset-stage-2": "^6.24.1",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -18,5 +19,10 @@
         "lodash": "^4.17.4",
         "vue": "^2.5.7",
         "vuetable-2": "^1.7.5"
+    },
+    "dependencies": {
+        "accounting": "^0.4.1",
+        "moment": "^2.21.0",
+        "vue-events": "^3.1.0"
     }
 }
